<resources>
    <string name="app_name">Casavoice</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="facebook_app_id">841270209384269</string>
    <string name="fb_login_protocol_scheme">fb841270209384269</string>
    <string name="notifications">notifications</string>
    <string name="title_activity_following_list">FollowingList</string>
    <string name="title_activity_vip_tab">VipTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_and_notifications">ActivityAndNotifications</string>
    <string name="activity">Activity</string>
    <string name="create_room">Create Room</string>
    <string name="room_name">Room Name</string>
    <string name="room_details">Room Details</string>
    <string name="set_picture">Set Picture</string>
    <string name="share_facebook_100">Share facebook 100</string>
    <string name="post_twitter_100">Post Twitter 100</string>
    <string name="watch_videos_50">Watch Videos 50</string>
    <string name="save">save</string>
    <string name="delete_all_chat">delete all chat</string>
    <string name="delete_chat">delete Chat</string>
    <string name="get_cool_id">Get Cool ID</string>
    <string name="up_the_room_100_happiness">Up the Room 100 Happiness</string>
    <string name="_50000">50000</string>
    <string name="edit_room_details">Edit Room details</string>
    <string name="edit_room_name">Edit Room Name</string>
    <string name="change_room_picture">Change Room Picture</string>
    <string name="your_followers">Your Followers</string>
    <string name="your_following">Your Following</string>
    <string name="the_only_car_is_available_now_is_fiat_wait_for_the_new_update_for_more_cars">The only Car is Available now is FIAT , Wait For the new Update For more Cars.</string>
    <string name="price_free">Price : FREE</string>
    <string name="happiness_20">Happiness : 20</string>
    <string name="the_only_house_is_available_now_is_basement_wait_for_the_new_update_for_more_houses">The only House is Available now is Basement , Wait For the new Update For more Houses.</string>
    <string name="happiness_10">Happiness : 10</string>
    <string name="the_only_pet_is_available_now_is_cat_wait_for_the_new_update_for_more_pets">The only Pet is Available now is Cat , Wait For the new Update For more Pets.</string>
    <string name="happiness_30">Happiness : 30</string>
    <string name="store">Store</string>
    <string name="profile">Profile</string>
    <string name="earn_gold">Earn Gold</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="settings">settings</string>
    <string name="ok">OK</string>
    <string name="_1000">1000</string>
    <string name="_60">60</string>
    <string name="_5000">5000</string>
    <string name="_600">600</string>
    <string name="_10">10</string>
    <string name="_4000">4000</string>
    <string name="_700">700</string>
    <string name="_800">800</string>
    <string name="_2000">2000</string>
    <string name="_6">6</string>
    <string name="_1200">1200</string>
    <string name="_400">400</string>
    <string name="_40">40</string>
    <string name="_20">20</string>
    <string name="_1">1</string>
    <string name="_80">80</string>
    <string name="_100">100</string>
    <string name="exit">Exit</string>
    <string name="report">Report</string>
    <string name="block_list">Block List</string>
    <string name="join">Join</string>
    <string name="edit_room">Edit Room</string>
    <string name="online">online</string>
    <string name="admins">Admins</string>
    <string name="lock_24_hours">Lock 24 Hours</string>
    <string name="_1_000_coins">1,000 Coins</string>
    <string name="lock_month">Lock Month</string>
    <string name="_7_000_coins">7,000 Coins</string>
    <string name="lock_3_months">Lock 3 Months</string>
    <string name="_19_000_coins">19,000 Coins</string>
    <string name="lock_year">Lock Year</string>
    <string name="_70_000_coins">70,000 Coins</string>
    <string name="recharge">Recharge</string>
    <string name="your_balance_0">Your balance : 0</string>
    <string name="_90_000_coins">90,000 Coins</string>
    <string name="_499_99">$ 499.99</string>
    <string name="_50_000_coins">50,000 Coins</string>
    <string name="_299_99">$ 299.99</string>
    <string name="_15_000_coins">15,000 Coins</string>
    <string name="_99_99">$ 99.99</string>
    <string name="_6_500_coins">6,500 Coins</string>
    <string name="_49_99">$ 49.99</string>
    <string name="_7_99">$ 7.99</string>
    <string name="_100_coins">100 Coins</string>
    <string name="_0_99">$ 0.99</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="nickname">Nickname</string>
    <string name="other">Other</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birth_date">Birth date :</string>
    <string name="type_your_report">Type your report</string>
    <string name="send_report">send report</string>
    <string name="search_user_or_room_by_id">Search User Or Room by id</string>
    <string name="log_out">Log out</string>
    <string name="vip">VIP</string>
    <string name="lock_room">Lock Room</string>
    <string name="cars">Cars</string>
    <string name="special_orders">Special orders</string>
    <string name="animals">Animals</string>
    <string name="houses">Houses</string>
    <string name="gender">Gender :</string>
    <string name="block">Block</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="upgrade">Upgrade</string>
    <string name="vip_logo_beside_the_nickname_in_the_chat">- VIP logo beside the Nickname in the Chat.</string>
    <string name="change_nickname_color_in_the_chat">- Change Nickname color in the Chat.</string>
    <string name="special_intro_when_log_in_the_room">- Special intro when log in the room.</string>
    <string name="vip_logo_in_profile">- VIP logo in profile</string>
    <string name="plus_your_level_up_to_10_levels">- Plus your level up to 10 levels .</string>
    <string name="intro_chat_with_the_vip_car">- intro chat with the VIP car</string>
    <string name="remove_admin">remove admin</string>
    <string name="unblock">unblock</string>
    <string name="remove">Remove</string>
    <string name="admin">admin</string>
    <string name="create_your_room">Create Your Room</string>
    <string name="your_favorite_rooms">your favorite rooms</string>
    <string name="plus_your_level_up_to_5_levels">- Plus your level up to 5 levels .</string>
    <string name="top_receiver">Top Receiver</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="name_changed">Name Changed …</string>
    <string name="gender_changed">Gender Changed …</string>
    <string name="birthdate_changed">BirthDate Changed …</string>
    <string name="picture_uploaded">Picture Uploaded …</string>
    <string name="permission_granted">permission granted</string>
    <string name="permission_denied">permission denied</string>
    <string name="logging_as">Logging as</string>
    <string name="Authentication_failed">Authentication failed</string>
    <string name="you_must_login_first">you must login first !!</string>
    <string name="Something_went_bad_try_again_later">Sorry Something went bad , try again later !!</string>
    <string name="failed">Failed …</string>
    <string name="save_your_information_first">Save your Information First !</string>
    <string name="you_need_to_charge">you need yo charge</string>
    <string name="good_again">Good , Again ?</string>
    <string name="select_picture">Select Picture</string>
    <string name="cool">Cool !</string>
    <string name="sending">Sending …</string>
    <string name="something_went_bad_try_again_later">Sorry Something went bad , try again later !!</string>
    <string name="locked_For">Locked For :</string>
    <string name="until">until :</string>
    <string name="your_balance">Your Balance :</string>
    <string name="create_your_room_first">Create your Room First</string>
    <string name="you_are">You are :</string>
    <string name="wait_until_your_vip_finished">Wait until your vip finished</string>
    <string name="legendary_vip">Legendary VIP</string>
    <string name="you_are_legendary_now">You are a LEGENDARY now</string>
    <string name="level_up_to_10">Level up to 10</string>
    <string name="cancel">Cancel</string>
    <string name="rechrge_your_balance">Recharge your balance</string>
    <string name="check_your_time">Set Automatic date and Time , set Automatic time zone</string>
    <string name="royal_vip">Royal VIP</string>
    <string name="level_up_to_5">Level up to 5</string>
    <string name="golden_vip">Golden VIP</string>
    <string name="silver_vip">Sliver VIP</string>
    <string name="you_are_sliver_now">You are a Sliver now</string>
    <string name="bronze_vip">Bronze VIP</string>
    <string name="you_are_pronze_now">You are a Bronze now</string>
    <string name="you_are_golden_now">You are a Golden now</string>
    <string name="you_are_royal_now">You are a Royal now</string>
    <string name="you_are_blocked_from">you are blocked from</string>
    <string name="create">Create</string>
    <string name="building">Building …</string>
    <string name="type_password">Type Password</string>
    <string name="unlike_this_room">Unlike this Room ?</string>
    <string name="are_you_sure">are you sure !</string>
    <string name="top_sender">Top Sender</string>
    <string name="you_are_suspended">You are suspended</string>
    <string name="check_internet">Check Internet</string>
    <string name="followed_your_room">followed your Room</string>
    <string name="mute">Mute</string>
    <string name="stop_mute_for">Stop Mute for :</string>
    <string name="only_owner_can_access">Owner Only can access</string>
    <string name="you_are_bovked_from">you are blocked from :</string>
    <string name="you_are_blocked_from_this_room">You are blocked From this Room</string>
    <string name="error_sending_gifts">Error Sending Gifts !!</string>
    <string name="your_balance_is">your Balance is :</string>
    <string name="to">for :</string>
    <string name="gift_cost">gift Cost :</string>
    <string name="send">Send !</string>
    <string name="send_to">Send to :</string>
    <string name="x">X</string>
    <string name="send_you_x">Send you X :</string>
    <string name="room">room :</string>
    <string name="legendary_vip_join_the_room">Legendary VIP joined The Room</string>
    <string name="royal_vip_join_the_room">Royal VIP join The Room</string>
    <string name="golden_vip_join_the_room">Golden VIP join The Room</string>
    <string name="silver_vip_join_the_room">Silver VIP join The Room</string>
    <string name="regular_vip_join_the_room">Regular VIP join The Room</string>
    <string name="you_can_lock_your_room_again_">you can lock your Room Again , it\'s cool Right !!</string>
    <string name="you_has_no_more_vip">you has no more vip</string>
    <string name="you_have_new_message">You have new Message</string>
    <string name="you_have_new_notification">You have new Notifications</string>
    <string name="room_created">Room Created</string>
    <string name="followed">followed</string>
    <string name="wrong_password">Wrong Password !!</string>
    <string name="not_enough_cash">Not Enough cash</string>
    <string name="buy_it_now_29999">Buy it Now … 29999</string>
    <string name="buy_it_now_49999">Buy it Now … 49999</string>
</resources>