<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/appbar_padding_top"
    android:paddingBottom="@dimen/appbar_padding_top"
    android:paddingLeft="@dimen/appbar_padding_top"
    android:paddingRight="@dimen/appbar_padding_top"
    android:background="@drawable/background_custom">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/top_receiver"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/recDailyTextView"
        android:gravity="right"
        android:layout_gravity="right"
        android:background="@drawable/button"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recDaily">

    </ListView>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekly"
        android:gravity="right"
        android:layout_gravity="right"
        android:background="@drawable/button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/recWeeklyTextView"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recWeekly">
    </ListView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly"
        android:gravity="right"
        android:layout_gravity="right"
        android:background="@drawable/button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/recMonthlyTextView"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recMonthly">
    </ListView>


</LinearLayout>