<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/appbar_padding_top"
    android:paddingBottom="@dimen/appbar_padding_top"
    android:paddingLeft="@dimen/appbar_padding_top"
    android:paddingRight="@dimen/appbar_padding_top"
    android:background="@color/colorPrimaryDark"
    android:weightSum="7"
    android:orientation="vertical"
    tools:context=".store.VipTabActivity$LegendaryVIP">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/vip_diamond"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|start"
            tools:ignore="NestedWeights">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:textColor="@android:color/white"
                android:text="@string/vip_logo_beside_the_nickname_in_the_chat"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|start">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:textColor="@android:color/white"
                android:text="@string/change_nickname_color_in_the_chat"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|start">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:textColor="@android:color/white"
                android:text="@string/special_intro_when_log_in_the_room"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|start">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:textColor="@android:color/white"
                android:text="@string/plus_your_level_up_to_10_levels"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|start">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:textColor="@android:color/white"
                android:text="@string/vip_logo_in_profile"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center|start">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:textColor="@android:color/white"
                android:text="@string/intro_chat_with_the_vip_car"
                android:drawableRight="@mipmap/vip_car"
                android:drawableEnd="@mipmap/vip_car" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="NestedWeights">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/buy_it_now_49999"
                android:textColor="@android:color/white"
                android:id="@+id/okLegendary"
                android:drawableRight="@mipmap/big_coins"
                android:drawableEnd="@mipmap/big_coins" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>